# flutter_ime

./: .pubignore  CHANGELOG.md  CLAUDE.md  CODE.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart  readme_examples.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_ime.dart  flutter_ime_ffi.dart  flutter_ime_method_channel.dart  flutter_ime_platform_interface.dart
lib/src/: caps_lock_state.dart  change_stream.dart  english_input_source.dart  flutter_ime_channels.dart  ime_conversion_mode.dart  input_source_token.dart  platform_support.dart  value_poller.dart
lib/src/ffi/: core_foundation.dart  core_graphics.dart  ffi_flutter_ime.dart  ffi_flutter_ime_stub.dart  macos_ime.dart  text_input_sources.dart  win32.dart  window_resolver.dart  windows_ime.dart
macos/: flutter_ime.podspec
macos/Classes/: CapsLockManager.swift  FlutterImePlugin.swift  ImeChannelNames.swift  ImeClassification.swift  InputSourceManager.swift
test/: caps_lock_state_test.dart  change_stream_test.dart  english_input_source_test.dart  ffi_fallback_test.dart  ffi_routing_test.dart  flutter_ime_channels_test.dart  flutter_ime_method_channel_test.dart  flutter_ime_test.dart  ime_conversion_mode_test.dart  input_source_token_test.dart  macos_notification_recovery_test.dart  macos_observer_lifecycle_test.dart  platform_gating_test.dart  value_poller_test.dart  window_resolver_test.dart
test/support/: mock_flutter_ime_platform.dart
windows/: CMakeLists.txt  caps_lock_manager.cpp  caps_lock_manager.h  flutter_ime_plugin.cpp  flutter_ime_plugin.h  flutter_ime_plugin_c_api.cpp  ime_channel_constants.h  ime_message_filter.cpp  ime_message_filter.h  input_source_manager.cpp  input_source_manager.h  input_source_token.cpp  input_source_token.h  method_dispatch.cpp  method_dispatch.h
windows/include/flutter_ime/: flutter_ime_plugin_c_api.h
windows/test/: CMakeLists.txt  flutter_ime_plugin_test.cpp  ime_message_filter_test.cpp  input_source_token_test.cpp  method_dispatch_test.cpp
